# escrow

./: Cargo.toml  DESKTOP_APP_DESIGN.md  README.md  bun.lockb  components.json  index.html  package-lock.json  package.json  prettier.config.cjs  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: dev-ci.yml  pr-draft-release.yml
dlc_test/: Cargo.toml
dlc_test/src/: main.rs  oracle.rs  resolvr_oracle.rs
escrow_agent/: .gitignore  Cargo.toml
escrow_agent/src/: main.rs  sled_oracle.rs
escrow_agent_messages/: .gitignore  Cargo.toml
escrow_agent_messages/src/: lib.rs
src/: App.tsx  bdk_dlc_blockchain.rs  bdk_dlc_wallet.rs  main.rs  main.tsx  resolvr_oracle.rs  tauriApi.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: contract.rs  helper.rs  main.rs  nostr.rs  resolvr_oracle.rs
src/components/auth/: ProtectedRoute.tsx
src/components/contracts/: contract.tsx  contracts.tsx
src/components/header/: Header.tsx  LoginButton.tsx  UserMenu.tsx
src/components/login/: LoginForm.tsx  RegisterForm.tsx
src/components/profile/: UserAvatar.tsx
src/components/ui/: avatar.tsx  button.tsx  calendar.tsx  card.tsx  checkbox.tsx  dropdown-menu.tsx  form.tsx  input.tsx  popover.tsx  stepper.tsx  tabs.tsx  toast.tsx
src/context/: AuthContext.tsx
src/layouts/: RootLayout.tsx
src/lib/: auth.ts  constants.ts  nostr.ts
src/pages/: BitcoinNodePage.tsx  ContractPage.tsx  ContractsPage.tsx  CreateContractPage.tsx  LoginPage.tsx  SettingsPage.tsx
src/static/: contracts.ts
src/stores/: authStore.ts  eventStore.ts
src/types/: index.ts
