[package]
name = "resolvr_dlc"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = "0.29.2"
bitcoin-rpc-provider = { git = "https://github.com/tvolk131/rust-dlc.git" }
dlc = { git = "https://github.com/tvolk131/rust-dlc.git" }
dlc-manager = { git = "https://github.com/tvolk131/rust-dlc.git" }
dlc-messages = { git = "https://github.com/tvolk131/rust-dlc.git", features = ["serde"] }
dlc-sled-storage-provider = { git = "https://github.com/tvolk131/rust-dlc.git" }
mocks = { git = "https://github.com/tvolk131/rust-dlc.git" }
hex = "0.4.3"
lightning = "0.0.116"
tokio = { version = "1.33.0", features = ["io-util", "macros", "rt", "rt-multi-thread", "sync", "net", "time"] }
secp256k1-zkp = {version = "0.7.0", features = ["bitcoin_hashes", "global-context", "rand", "rand-std", "serde"]}
sled = "0.34.7"
bincode = "1.3.3"
serde = "1.0.193"
