[package]
name = "escrow_agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bitcoin-rpc-provider = { git = "https://github.com/tvolk131/rust-dlc.git" }
dlc = { git = "https://github.com/tvolk131/rust-dlc.git" }
dlc-manager = { git = "https://github.com/tvolk131/rust-dlc.git" }
dlc-messages = { git = "https://github.com/tvolk131/rust-dlc.git", features = ["serde"] }
escrow_agent_messages = { path = "../escrow_agent_messages" }
lightning = "0.0.116"
secp256k1-zkp = { version = "0.7.0", features = ["serde"] }
serde = "1.0.193"
sled = "0.34.7"
