[package]
name = "resolvr-desktop"
version = "0.0.0"
description = "A Bitcoin-native dispute resolution service for FOSS bounties"
authors = ["Tommy Volk"]
license = "MIT"
repository = "https://github.com/Resolvr-io/escrow"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.12", features = [] }

[dependencies]
bitcoin = "0.29.2"
bitcoin-rpc-provider = { git = "https://github.com/tvolk131/rust-dlc.git" }
dlc = { git = "https://github.com/tvolk131/rust-dlc.git" }
dlc-manager = { git = "https://github.com/tvolk131/rust-dlc.git" }
dlc-messages = { git = "https://github.com/tvolk131/rust-dlc.git" }
dlc-sled-storage-provider = { git = "https://github.com/tvolk131/rust-dlc.git" }
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0-alpha.18", features = [] }
tauri-plugin-os = "2.0.0-alpha.4"
tauri-plugin-shell = "2.0.0-alpha"
tauri-plugin-window = "2.0.0-alpha"
tokio = { version = "1.34.0", features = ["time"] }

[features]
# This feature is used for production builds or when `devPath` points to the
# filesystem. DO NOT REMOVE!
custom-protocol = ["tauri/custom-protocol"]
