[package]
name = "escrow"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-alpha", features = [] }

[dependencies]
bitcoin = "0.29.2"
bitcoin-rpc-provider = { git = "https://github.com/tvolk131/rust-dlc.git" }
dlc = { git = "https://github.com/tvolk131/rust-dlc.git" }
dlc-manager = { git = "https://github.com/tvolk131/rust-dlc.git" }
dlc-messages = { git = "https://github.com/tvolk131/rust-dlc.git" }
dlc-sled-storage-provider = { git = "https://github.com/tvolk131/rust-dlc.git" }
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = [] }
tokio = { version = "1.34.0", features = ["time"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
