[package]
name = "resolvr-desktop"
version = "0.0.0"
description = "A Bitcoin-native dispute resolution service for FOSS bounties"
authors = ["Tommy Volk"]
license = "MIT"
repository = "https://github.com/Resolvr-io/escrow"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
anyhow = "1.0.75"
bitcoin = "0.29.2"
bitcoin-rpc-provider = { git = "https://github.com/tvolk131/rust-dlc.git" }
dlc = { git = "https://github.com/tvolk131/rust-dlc.git" }
dlc-manager = { git = "https://github.com/tvolk131/rust-dlc.git" }
dlc-messages = { git = "https://github.com/tvolk131/rust-dlc.git" }
dlc-sled-storage-provider = { git = "https://github.com/tvolk131/rust-dlc.git" }
escrow_agent_messages = { path = "../escrow_agent_messages" }
hex = "0.4.3"
keyring = "2"
mocks = { git = "https://github.com/tvolk131/rust-dlc.git" }
nostr-sdk = "0.25.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = ["shell-open"] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tokio = { version = "1.34.0", features = ["time"] }

[features]
# This feature is used for production builds or when `devPath` points to the
# filesystem. DO NOT REMOVE!
custom-protocol = ["tauri/custom-protocol"]
